# TopK-CQ

./: .gitignore  README.md
C++/: .gitignore  CMakeLists.txt  README.md
C++/data/: bitcoin.csv  bitcoin_dense.txt  test.txt  test_large.txt  wiki_vote.csv
C++/src/: CMakeLists.txt  Operators.h  Table.cpp  Table.h  TopKComputer.cpp  TopKComputer.h  Tuple.cpp  Tuple.h
C++/test/: CMakeLists.txt  TableTest.cpp  TopK.cpp  TopKTest.cpp
RankEnum/: README.md  main.cpp  wiki-vote.csv
RankEnum/algorithm/: algorithm.cpp  algorithm.h
RankEnum/utils/: config.h  config.h.gch
SecTopK/: .gitignore  ABY3-README.md  CMakeLists.txt  LICENSE  build.py
SecTopK/SecTopK/: CMakeLists.txt  CalcSHA.cpp  CalcSHA.h  LevelK.cpp  LevelK.h  Permutation.cpp  Permutation.h  PrefixSumCircuit.cpp  PrefixSumCircuit.h  ProductK.cpp  ProductK.h  SingleRelationOperator.cpp  SingleRelationOperator.h  demo.cpp  join.cpp  join.h  sort.cpp  sort.h  test.cpp
SecTopK/aby3/: CMakeLists.txt
SecTopK/aby3-DB/: CMakeLists.txt  DBServer.cpp  DBServer.h  LowMC.h  OblvPermutation.cpp  OblvPermutation.h  OblvSwitchNet.cpp  OblvSwitchNet.h  Table.cpp  Table.h  com-psi.vcxproj.filters
SecTopK/aby3-DB_tests/: CMakeLists.txt  DBServerTests.cpp  DBServerTests.h  LowMC.h  PermutaitonTests.cpp  PermutaitonTests.h  UnitTests.cpp  UnitTests.h  com-psi_tests.vcxproj.filters  lowMC.cpp
SecTopK/aby3-ML/: CMakeLists.txt  LinearModelGen.cpp  LinearModelGen.h  NeuralModelGen.cpp  NeuralModelGen.h  PlainML.cpp  PlainML.h  Regression.h  aby3ML.cpp  aby3ML.h  main-linear.cpp  main-linear.h  main-logistic.cpp  main-logistic.h  main-pred.cpp  main-pred.h
SecTopK/aby3_tests/: CMakeLists.txt  CircuitTests.cpp  CircuitTests.h  Sh3BinaryEvaluatorTests.cpp  Sh3BinaryEvaluatorTests.h  Sh3ConverterTests.cpp  Sh3ConverterTests.h  Sh3EncryptorTests.cpp  Sh3EncryptorTests.h  Sh3EvaluatorTests.cpp  Sh3EvaluatorTests.h  Sh3PiecewiseTests.cpp  Sh3PiecewiseTests.h  Sh3RuntimeTests.cpp  Sh3RuntimeTests.h  SharedOTTests.cpp  SharedOTTests.h  (+2 more)
lambdaSQL/: Graph  README.md  action.py  aggregation.py  codegen.py  codegenTopK.py  comparison.py  dummy_query.json  enumerate.py  enumsType.py  generateAggIR.py  generateIR.py  generateTopKIR.py  jointree.py  levelK.py  main.py  nullJoinTree1.txt  nulloutputVariables.txt  nullrelations1.txt  nulltopK.txt  productK.py  reduce.py  rewrite_and_run.sh  start_parser.sh  topk.py  treenode.py
python/: .gitignore  bottom_up.py  gen_weight.py  line_join.py  main.py  non_optimized.py  sql_file.py
scripts/: common.sh  config.properties  env.sh
(+173 files in other folders)
